HWPD-402 add word break global rule to solve bugs unusually long text overflows in cards etc.

--- a/src/component-library/globals/_reset.module.scss
+++ b/src/component-library/globals/_reset.module.scss
@@ -22,3 +22,7 @@ li {
 strong {
   font-weight: 700;
 }
+
+body {
+  word-wrap: break-word;
+}
